<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currier</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_rating">ActivityRating</string>
    <string name="title_activity_rate_review">RateReview</string>
    <string name="postButton">Post</string>
    <string name="reviewHint">Let us know what you think about this seller (optional)</string>
    <string name="sellerName">Seller Name</string>
    <string name="sellerAddr">Seller Addr</string>
    <string name="title_activity_view_ratings">ViewRatings</string>
    <string name="menu_rate">Ratings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_search">Search for Food</string>
    <string name="menu_items">Food Menu</string>
    <string name="txtListSellerBanner">Your nearby sellers:</string>
    <string name="title_section1">Split View</string>
    <string name="title_section2">Map View</string>
    <string name="title_section3">Nothing Here Yet</string>
    <string name="bg_img_desc">Background Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="new_register">New to Currier? Register here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_already">Already have an account? Login here</string>
    <string name="reg_new_acct">Register New Account</string>
    <string name="login_title">Login to your Account</string>
    <string name="register_title">Register New Account</string>
    <string name="menu_item_margin_left">10dp</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="balance">Balance</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back">Back</string>
    <string name="save_profile">Save Profile</string>
    <string name="discard_change">Discard Change</string>
    <string name="title_activity_edit_profile">Edit Profile Activity</string>
    <string name="submit_order">Submit</string>
    <string name="add_cart">Add to Cart</string>
    <string name="title_activity_cart">Order Details</string>
	<string name="total_label_text">Total Price:</string>
    <string name="cancel_order">Cancel</string>
	<string name="order_complete">Order Complete.\nEnjoy Your Food!</string>
	
	<color name="menu_background_unselected">#66ABBDCD</color>
	<color name="menu_background_selected">#EE117FAB</color>
	<color name="button_background">#44EB8540</color>
	<color name="dark_gray">#666666</color>
	<color name="light_gray">#22AAAAAA</color>
	<color name="grad_start">#99445577</color>
	<color name="grad_end">#99EEEEFF</color>
</resources>