<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom|collapseActionView"
        />
    <item
        android:id="@+id/menu_account"
        android:title="@string/menu_account"
        android:icon="@drawable/ic_menu_friendslist"
        android:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_menu_revert"
        android:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    

</menu>