<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/relative_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		
        <!-- Background Starts -->
        
        <ImageView
            android:id="@+id/imageView_Background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/profile" 
 			android:layout_alignTop="@+id/profile"
 			android:layout_alignRight="@+id/profile" 
 			android:layout_alignLeft="@+id/profile"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bg_img_desc"
            android:scaleType="fitXY"
            android:src="@drawable/tiles" />

        <!-- Background Ends -->
        
        <!-- Footer Start -->


        <!-- Footer Ends -->


        <!-- Registration Form -->

       	<LinearLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dip" >

           	<!-- Balance Label -->
           	
           	<TextView
                android:id="@+id/label_balance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/prof_balance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />
           
            <!-- First Name Label -->

            <TextView
                android:id="@+id/label_firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/prof_firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />

            <!-- Last Name Label -->

            <TextView
                android:id="@+id/label_lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/prof_lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />
            
            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/prof_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            
            <!-- Phone Label -->

            <TextView
                android:id="@+id/label_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/prof_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="phone"
                android:singleLine="true" />
            
            <!-- Address Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/prof_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textPostalAddress"
                android:singleLine="true" />
            
            <!-- Edit Button -->

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/edit_profile" />
            
            <!-- Back Button -->
            
            <Button
                android:id="@+id/btnBack"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/back" />  

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>

</ScrollView>