<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/relative_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		
        <!-- Background Starts -->
        
        <ImageView
            android:id="@+id/imageView_Background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/register" 
 			android:layout_alignTop="@+id/register"
 			android:layout_alignRight="@+id/register" 
 			android:layout_alignLeft="@+id/register"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bg_img_desc"
            android:scaleType="fitXY"
            android:src="@drawable/tiles" />

        <!-- Background Ends -->
        
        <!-- Footer Start -->


        <!-- Footer Ends -->


        <!-- Registration Form -->

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- First Name Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/reg_firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />
            <!-- Last Name Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/reg_lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />
            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />
            <!-- Confirm Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/reg_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />
            <!-- Register Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/reg_new_acct" />
            <!-- Link to Login Screen -->

            <TextView
                android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="40dip"
                android:gravity="center"
                android:text="@string/login_already"
                android:textColor="#025f7c"
                android:textSize="16sp" />
        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>

</ScrollView>