<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RateReview" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/sellerInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sellerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sellerName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/sellerAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sellerAddr"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reviewHint"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/postButton"
                style="@android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="postRating"
                android:text="@string/postButton" />

            <!--
                 <ScrollView
                android:id="@+id/reviewsScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            -->

            <TableLayout
                android:id="@+id/reviewsTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TableLayout>
            <!-- </ScrollView> -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>